--- a/css/responsive.css
+++ b/css/responsive.css
@@ -174,6 +174,9 @@
   #portfolio ul.filterBt{
   display: none;
   }
+  #portfolio .btnA{
+  display: none;
+  }
   #portfolio ul.list{  
   height: calc(100% / 7.5);
   justify-content: center;
