--- a/includes/main.html
+++ b/includes/main.html
@@ -35,7 +35,7 @@
                     </li>
                     <li>
                         <h4 class="h3">JS</h4>
-                        <p class="p">기초</p>
+                        <p class="p"></p>
                     </li>
                 </ul>
                 <h3 class="h3">I can do this too</h3>
@@ -107,7 +107,7 @@
                 <li class="pfp2" data-n="p2">
                     <div class="screen">
                         <h3 class="h3">풍림무약</h3>
-                        <p class="p">메인 페이지, 서브 페이지(4) 구현</p> 
+                        <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
                         <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                         <p class="p">사용 툴 : VS Code, Sass</p>
                         <span class="btControl">
