--- a/includes/main.html
+++ b/includes/main.html
@@ -11,7 +11,7 @@
                     학력 : 경민대학교 정보통신과 중퇴<br>
                     수료 내역 : 종로 그린컴퓨터 학원 <br>
                     자격증 : ITQ 한글, 엑셀, 파워포인트<br>
-                    장접 : 리더쉽, 이해력, 습득력<br>
+                    장점 : 리더쉽, 이해력, 습득력<br>
                     취미 : 복싱, 맛집 찾기, 음악 듣기 <br>
                     특기 : 노래 부르기, 달리기, 리더쉽 <br>
                 </p>
@@ -27,15 +27,12 @@
                 <ul class="skills">
                     <li>
                         <h4 class="h3">HTML5</h4>
-                        <p class="p">중상</p>
                     </li>
                     <li>
                         <h4 class="h3">CSS3</h4>
-                        <p class="p">중상</p>
                     </li>
                     <li>
                         <h4 class="h3">JS</h4>
-                        <p class="p"></p>
                     </li>
                 </ul>
                 <h3 class="h3">I can do this too</h3>
@@ -65,83 +62,142 @@
                 <li><a href="" class="filterResponsive">반응형</a></li>
                 <li><a href="" class="filterJquery">jQuery</a></li>
             </ul>
-            <ul class="list">
-                <li class="pf7" data-n="7">
-                    <div class="screen">
-                        <h3 class="h3">윤현몰 코딩</h3>
-                        <p class="p">메인 페이지 구현</p> 
-                        <p class="p">(PC, 모바일 반응형)</p>
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pf7/index.html" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="pf6" data-n="6">
-                    <div class="screen">
-                        <h3 class="h3">브랜드엑스<br>홈페이지 코딩</h3>
-                        <p class="p">메인 페이지 구현</p> 
-                        <p class="p">(PC, 모바일 반응형)</p>
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pf6/index.html" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="pfp3" data-n="p3">
-                    <div class="screen">
-                        <h3 class="h3">달콤커피 코딩</h3>
-                        <p class="p">메인 페이지 구현</p> 
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pfp3/index.html" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="pfp2" data-n="p2">
-                    <div class="screen">
-                        <h3 class="h3">풍림무약</h3>
-                        <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pfp2/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="pf5" data-n="5">
-                    <div class="screen">
-                        <h3 class="h3">삼성전자<br>회사소개 코딩</h3>
-                        <p class="p">메인 페이지, 서브 페이지(8) 구현</p> 
-                        <p class="p">(PC, 모바일 반응형)</p>
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pf5/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>
-                <li class="pf4" data-n="4">
-                    <div class="screen">
-                        <h3 class="h3">한진칼 리뉴얼 코딩</h3>
-                        <p class="p">(PC, 모바일 반응형)</p>
-                        <p class="p">사용 기술 : Html5, Css3, jQuery</p>
-                        <p class="p">사용 툴 : VS Code, Sass</p>
-                        <span class="btControl">
-                            <a href="" class="previewBt">미리보기</a>
-                            <a href="pf4/index.html" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
-                        </span>
-                    </div>
-                </li>    
-            </ul>
+            <div class="btnA">
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <ul class="list swiper-slide">
+                        <li class="pf8" data-n="8">
+                            <div class="screen">
+                                <h3 class="h3">카페24</h3>
+                                <p class="p">카페24를 이용한 홈페이지 제작</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik0201.cafe24.com" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li> 
+                        <li class="pf7" data-n="7">
+                            <div class="screen">
+                                <h3 class="h3">윤현몰<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p>
+                                <p class="p">(PC, 모바일 반응형)</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="pf6" data-n="6">
+                            <div class="screen">
+                                <h3 class="h3">브랜드엑스<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p>
+                                <p class="p">(PC, 모바일 반응형)</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="pfp3" data-n="p3">
+                            <div class="screen">
+                                <h3 class="h3">달콤커피<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="pfp2" data-n="p2">
+                            <div class="screen">
+                                <h3 class="h3">풍림무약<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
+                                <p class="p">(PC, 모바일 반응형)</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="http://jik0201.woobi.co.kr/pfp2/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>                    
+                        <li class="pf5" data-n="5">
+                            <div class="screen">
+                                <h3 class="h3">삼성전자<br>회사소개 코딩</h3>
+                                <p class="p">메인 페이지, 서브 페이지(8) 구현</p> 
+                                <p class="p">(PC, 모바일 반응형)</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="http://jik0201.woobi.co.kr/pf5/index.php" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="list swiper-slide">
+                       <li class="pf4" data-n="4">
+                            <div class="screen">
+                                <h3 class="h3">한진칼 홈페이지<br> 리뉴얼 코딩</h3>
+                                <p class="p">(PC, 모바일 반응형)</p>
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="pf3" data-n="3">
+                            <div class="screen">
+                                <h3 class="h3">투썸플레이스<br> 홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p> 
+                                <p class="p">사용 기술 : Html5, Css3, jQuery</p>
+                                <p class="p">사용 툴 : VS Code, Sass</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>    
+                        <li class="pf2" data-n="2">
+                            <div class="screen">
+                                <h3 class="h3">제주항공<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p> 
+                                <p class="p">사용 기술 : Html5, Css3</p>
+                                <p class="p">사용 툴 : VS Code</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>    
+                        <li class="pf1" data-n="1">
+                            <div class="screen">
+                                <h3 class="h3">한진칼<br>홈페이지 코딩</h3>
+                                <p class="p">메인 페이지 구현</p> 
+                                <p class="p">사용 기술 : Html5, Css3</p>
+                                <p class="p">사용 툴 : VS Code</p>
+                                <span class="btControl">
+                                    <a href="" class="previewBt">미리보기</a>
+                                    <a href="https://beomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     <!-- 컨택트 -->
@@ -160,7 +216,7 @@
                     <h3 class="h3">SNS</h3>
                     <p class="p">Kakao Talk : <a href="https://open.kakao.com/o/s1XdEN2d" target="blink" title="클릭하면 이동합니다"></a></p>
                     <p class="p">Instagram : <a href="https://www.instagram.com/beomjik_0201/" target="blink" title="클릭하면 이동합니다"></a></p>
-                    <p class="p">Face Book : <a href="https://www.facebook.com/profile.php?id=100003996336010" target="blink" title="클릭하면 이동합니다"></a></p>
+                    <p class="p">GitHub : <a href="https://github.com/BeomJik" target="blink" title="클릭하면 이동합니다"></a></p>
                 </div>
             </div>
         </div>
