--- a/includes/main.html
+++ b/includes/main.html
@@ -9,11 +9,12 @@
                     <span title="별명 : 범직(BeomJik)">이름 : 박범근</span> <br>
                     나이 : 2000.02.01 (만 22세)<br>
                     학력 : 경민대학교 정보통신과 중퇴<br>
-                    수료 내역 : 종로 그린컴퓨터 학원 <br>
+                    수료 내역 : [스마트혼합]프론트엔드 개발자로<br> 
+                    가는 UI/UX반응형 웹디자인&웹퍼블리셔<br>
                     자격증 : ITQ 한글, 엑셀, 파워포인트<br>
-                    장접 : 리더쉽, 이해력, 습득력<br>
-                    취미 : 복싱, 맛집 찾기, 음악 듣기 <br>
-                    특기 : 노래 부르기, 달리기, 리더쉽 <br>
+                    장점 : 리더쉽, 이해력, 습득력<br>
+                    취미 : 복싱, 맛집 찾기, 음악 듣기<br>
+                    특기 : 노래 부르기, 달리기, 리더쉽<br>
                 </p>
             </div>
         </div>
@@ -27,15 +28,12 @@
                 <ul class="skills">
                     <li>
                         <h4 class="h3">HTML5</h4>
-                        <p class="p">중상</p>
                     </li>
                     <li>
                         <h4 class="h3">CSS3</h4>
-                        <p class="p">중상</p>
                     </li>
                     <li>
                         <h4 class="h3">JS</h4>
-                        <p class="p">기초</p>
                     </li>
                 </ul>
                 <h3 class="h3">I can do this too</h3>
@@ -50,7 +48,7 @@
                         <h4 class="h3">Oven</h4>
                     </li>
                     <li>
-                        <h4 class="h3">Potoshop</h4>
+                        <h4 class="h3">Bootstrap</h4>
                     </li>
                 </ul>
             </div>
@@ -93,7 +91,7 @@
                                 <p class="p">사용 툴 : VS Code, Sass, bootstrap</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pfp7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf7/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>
@@ -106,7 +104,7 @@
                                 <p class="p">사용 툴 : VS Code, Sass</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pfp6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf6/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>
@@ -118,7 +116,7 @@
                                 <p class="p">사용 툴 : VS Code, Sass</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pfp3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>
@@ -126,7 +124,6 @@
                             <div class="screen">
                                 <h3 class="h3">풍림무약<br>홈페이지 코딩</h3>
                                 <p class="p">메인 페이지, 서브 페이지(5) 구현</p> 
-                                <p class="p">(PC, 모바일 반응형)</p>
                                 <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                 <p class="p">사용 툴 : VS Code, Sass</p>
                                 <span class="btControl">
@@ -152,37 +149,38 @@
                     <ul class="list swiper-slide">
                        <li class="pf4" data-n="4">
                             <div class="screen">
-                                <h3 class="h3">한진칼 홈페이지<br> 리뉴얼 코딩</h3>
+                                <h3 class="h3">한진칼 홈페이지<br>리뉴얼 코딩</h3>
+                                <p class="p">메인 페이지</p> 
                                 <p class="p">(PC, 모바일 반응형)</p>
                                 <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                 <p class="p">사용 툴 : VS Code, Sass</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf4/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>
                         <li class="pf3" data-n="3">
                             <div class="screen">
-                                <h3 class="h3">투썸플레이스<br> 홈페이지 코딩</h3>
+                                <h3 class="h3">투썸플레이스<br>홈페이지 코딩</h3>
                                 <p class="p">메인 페이지 구현</p> 
                                 <p class="p">사용 기술 : Html5, Css3, jQuery</p>
                                 <p class="p">사용 툴 : VS Code, Sass</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf3/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>    
                         <li class="pf2" data-n="2">
                             <div class="screen">
-                                <h3 class="h3">제주항공<br> 홈페이지 코딩</h3>
+                                <h3 class="h3">제주항공<br>홈페이지 코딩</h3>
                                 <p class="p">메인 페이지 구현</p> 
                                 <p class="p">사용 기술 : Html5, Css3</p>
                                 <p class="p">사용 툴 : VS Code</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf2/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>    
@@ -194,7 +192,7 @@
                                 <p class="p">사용 툴 : VS Code</p>
                                 <span class="btControl">
                                     <a href="" class="previewBt">미리보기</a>
-                                    <a href="https://boeomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
+                                    <a href="https://beomjik.github.io/pf1/" target="blink" title="클릭하면 이동합니다" class="link">바로가기</a>
                                 </span>
                             </div>
                         </li>
@@ -219,7 +217,7 @@
                     <h3 class="h3">SNS</h3>
                     <p class="p">Kakao Talk : <a href="https://open.kakao.com/o/s1XdEN2d" target="blink" title="클릭하면 이동합니다"></a></p>
                     <p class="p">Instagram : <a href="https://www.instagram.com/beomjik_0201/" target="blink" title="클릭하면 이동합니다"></a></p>
-                    <p class="p">Face Book : <a href="https://www.facebook.com/profile.php?id=100003996336010" target="blink" title="클릭하면 이동합니다"></a></p>
+                    <p class="p">Github : <a href="https://github.com/BeomJik" target="blink" title="클릭하면 이동합니다"></a></p>
                 </div>
             </div>
         </div>
