--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,37 +1,37 @@
-@media screen and (max-width:768px){
+  @media screen and (max-width:768px){
   /*  상단영역  */
   header .h1::after{
     display: none;
   }
   header .h1 a{  
-  font-size: calc(30px * 0.7);
-  padding: calc(25% - 90px) 0 0 calc(50% - 90px); 
+    font-size: calc(30px * 0.7);
+    padding: calc(25% - 90px) 0 0 calc(50% - 90px); 
   }
   header ul.gnb{
-  display: none;
-  position: static;
+    display: none;
+    position: static;
   }
   header ul.gnb li a{
-  font-size: calc(25px * 0.7);
-  padding: 5px 0 0 0;
+    font-size: calc(25px * 0.7);
+    padding: 5px 0 0 0;
   }
   /*  타이틀영역  */
   #title{
-  background-position: center;
-  background-size: cover;
-  }
+    background-position: center;
+    background-size: cover;
+    }
   #title hgroup{
-  text-align: center;
+    text-align: center;
   }
   #title hgroup .h2{
-  font-size: 8vw;
-  margin-top: 10px;
+    font-size: 8vw;
+    margin-top: 10px;
   }
   #title hgroup .h2 span:nth-child(1){
-  text-shadow: 0px 0px 30px #000;
+    text-shadow: 0px 0px 30px #000;
   }
   #title hgroup .h2 span:nth-child(2){   
-  font-size: 15vw;
+    font-size: 15vw;
   }
   #title hgroup .h2 span:nth-child(2)::after{
     display: none;
@@ -44,15 +44,15 @@
   }
   /*  메인영역  */
   main{ 
-  height: 600%;
+    height: 600%;
   }
   main section .wrap{
-  width: 100vw;
-  overflow: hidden;
+    width: 100vw;
+    overflow: hidden;
   }
   main .h2{
-  font-size: calc(80px * 0.7);
-  margin-top: 10%;
+    font-size: calc(80px * 0.7);
+    margin-top: 10%;
   }
   #about h2::after,#skills h2::after,
   #portfolio h2::after{
@@ -60,48 +60,48 @@
   } 
   /* 소개 */
   #about {
-  height: calc(100% / 6);
+    height: calc(100% / 6);
   }
   #about .wrap{
-  padding: 0;
-  justify-content: space-between;
+    padding: 0;
+    justify-content: space-between;
   }
   #about .intro{
-  padding: 0;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 90%;
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
   }
   #about .intro h3.h3{
-  height: 50%;
-  margin-top: 0%;
-  font-size: calc(50px * 0.7);
-  width: 80vw;
-  max-width: 56vh;
-  display: flex;
-  font-size: 0;
+    height: 50%;
+    margin-top: 0%;
+    font-size: calc(50px * 0.7);
+    width: 80vw;
+    max-width: 56vh;
+    display: flex;
+    font-size: 0;
   }
   #about .intro h3.h3::before{ 
-  width: 80vw;
-  max-width: 56vh;
-  max-height: 72vh;
-  height: 100%;
+    width: 80vw;
+    max-width: 56vh;
+    max-height: 72vh;
+    height: 100%;
   }
   #about .intro .p{
-  height: 50%;
-  width: 80vw;
-  padding: 0 20px;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  white-space: initial;
-  font-size: 18px;
-  box-sizing: border-box;
-  max-width: 56vh;
-  border-radius: 0 0 10px 10px;
-  width: 80vw;
+    height: 50%;
+    width: 80vw;
+    padding: 0 20px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    white-space: initial;
+    font-size: 17px;
+    box-sizing: border-box;
+    max-width: 56vh;
+    border-radius: 0 0 10px 10px;
+    width: 80vw;
   }
   #about .intro .p span{
   margin: initial;
@@ -111,148 +111,179 @@
   }
   /* 스킬 */
   #skills{
-  height: calc(100% / 6);
+    height: calc(100% / 6);
   }
   #skills .wrap{
-  justify-content: initial;
+    justify-content: initial;
   }
   #skills .wrapin{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
   }
   #skills ul.skills{  
-  margin-bottom: 0;
-  /*! height: 90vh; */
+    margin-bottom: 0; 
   }
   #skills ul.skills > h3.h3{    
-  font-size: calc(50px * 0.7);
-  margin: 10px 0;
+    font-size: calc(50px * 0.7);
+    margin: 10px 0;
   }
   #skills ul.skills li{    
-  width: calc(100% / 3);
+    width: calc(100% / 3);
   }
   #skills ul.skills li::before{
-  width: 13vh;
-  height: 30vw;
-  background-size: 80% !important;
+    width: 13vh;
+    height: 30vw;
+    background-size: 80% !important;
   }
   #skills ul.skills li h4.h3{    
-  font-size: calc(33px * 0.7);
+    font-size: calc(33px * 0.7);
   }
-  #skills ul.skills li p.p{
-    
-  font-size: calc(30px * 0.7);
+  #skills ul.skills li p.p{    
+    font-size: calc(30px * 0.7);
   }
   #skills ul.tool{
   }
   #skills ul.tool > h3.h3{    
-  font-size: calc(50px * 0.7);
-  margin: 10px 0;    
-  height: fit-content;
+    font-size: calc(50px * 0.7);
+    margin: 10px 0;    
+    height: fit-content;
   }
   #skills ul.tool li{
-  width: calc(100% / 4);
-  height: fit-content;
+    width: calc(100% / 4);
+    height: fit-content;
   }
   #skills ul.tool li::before{
-  width: 13vh;
-  height: 30vw;
-  background-size: 60% !important;
+    width: 13vh;
+    height: 30vw;
+    background-size: 60% !important;
   }
   #skills ul.tool li h4.h3{  
-  font-size: calc(33px * 0.7);
+    font-size: calc(33px * 0.7);
   }
   /* 포트폴리오 */
   #portfolio{
-   height: calc(300% / 6);
-   width: 100%;
+    height: calc(300% / 6);
+    width: 100%;
   }
   #portfolio .wrap{
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
   }
   #portfolio ul.filterBt{
-  display: none;
+    display: none;
   }
   #portfolio .btnA{
-  top: 50%;
+    top: 50%;
   }
   #portfolio .swiper-button-next{  
-  right: 0px;
+    right: 0px;
   }
   #portfolio .swiper-button-prev{  
-  left: 0px;
+    left: 0px;
   }
   #portfolio .swiper-button-next::after, 
   #portfolio .swiper-button-prev::after{
     font-size: 30px;
   }
   #portfolio ul.list{  
-  height: calc(100% / 7.5);
-  justify-content: center;
-  row-gap: 25%;
-  margin-top: 20%;
+    height: calc(100% / 7.5);
+    justify-content: center;
+    row-gap: 25%;
+    margin-top: 20%;
   }
   #portfolio ul.list li{
-  width: 80vw;
-  max-width: 56vh;
-  max-height: 270px;
-  height: 100%;
-  border: none;
+    width: 80vw;
+    max-width: 56vh;
+    max-height: 270px;
+    height: 100%;
+    border: none;
   }
   #portfolio ul.list li .screen{
-  background-color: #00000070;
-  border-radius: 10px;
-  max-width: 56vh;
-  transform: initial !important;
-  height: 100%;
+    background-color: #00000070;
+    border-radius: 10px;
+    max-width: 56vh;
+    transform: initial !important;
+    height: 100%;
   }
   #portfolio ul.list li a h3{
-  display: block;
+    display: block;
   }
   #portfolio ul.list li a p{
-  display: block;
-  font-size: 16px;
+    display: block;
+    font-size: 16px;
   }
   #portfolio ul.list li .previewBt{
-  display: none;
+    display: none;
   }
   /*  컨택트  */
   #contact{    
-  height: calc(100% / 6);
+    height: calc(100% / 6);
   }
   #contact div.wrap{
-  width: 100%;
+    width: 100%;
   } 
   #contact .h2{
-  font-size: calc(95px * 0.7);
+    font-size: calc(95px * 0.7);
   }
   #contact h2::after{
-  display: none;
+    display: none;
   }
-  #contact h2 + p{
-  font-size: calc(20px * 0.7);
+    #contact strong+.p{
+    font-size: calc(20px * 0.7);    
+  }
+    #contact .gform{
+      display: none;
+    }
+  #contact .gform .form-elements{
+    width: 60%; 
+  }
+  #contact .gform .form-elements .pure-group{
+    width: 100%;    
+    margin: 0;
+  }
+  #contact .gform .form-elements .pure-group:nth-of-type(3){
+    width: 100%;    
+    height: 50px;
+  }
+  #contact .gform .form-elements .pure-group label{
+  padding: 5px;
+  }
+  #contact .gform .form-elements .pure-group textarea{
+    height: 50%;
+    margin: 0;
+  }
+  #contact .gform .form-elements .pure-group input{
+    padding: 5px;
+    margin:  5px 0 0 0;
+  }
+  #contact .button-success{
+    width: 100%;
+    padding: 15px;
+    margin: 0;
   }
   #contact div.info{  
-  flex-direction: column;
-  align-items: start;
-  margin: 0 auto;
-  justify-content: space-between;
+    flex-direction: column;
+    align-items: start;
+    margin: 0 auto;
+    justify-content: space-between;
   }
   #contact div.ad{
-  margin-bottom: 10%;
+    height: auto;
   }
   #contact div h3{ 
-  font-size: calc(33px * 0.8);
+    font-size: calc(33px * 0.8);
   }
   #contact .p,#contact .p a{
-  font-size: calc(18px * 0.8);
-  padding: 5px 0;
+    padding: 5px 0;
+    font-size: calc(18px * 0.8);
+    display: none;
   }
-  #contact div.sns{    
-  justify-content: space-between;
+  #contact div.sns{
+    padding: 5px 0;
+    font-size: calc(18px * 0.8);
+    display: ;
   }
   /* 하단영역 */  
   footer a.top{
