--- a/includes/main.html
+++ b/includes/main.html
@@ -9,7 +9,7 @@
                     <span title="별명 : 범직(BeomJik)">이름 : 박범근</span> <br>
                     나이 : 2000.02.01 (만 22세)<br>
                     학력 : 경민대학교 정보통신과 중퇴<br>
-                    수료 내역 : [스마트혼합]프론트엔드 개발자로<br> 
+                    수료 내역 : [스마트혼합]프론트엔드 개발자로<br>
                     가는 UI/UX반응형 웹디자인&웹퍼블리셔<br>
                     자격증 : ITQ 한글, 엑셀, 파워포인트<br>
                     장점 : 리더쉽, 이해력, 습득력<br>
@@ -205,7 +205,38 @@
     <section id="contact">
         <div class="wrap">
             <h2 class="h2 subject">CONTACT</h2>
-            <p><strong>끝까지 봐주셔서 감사합니다!</strong>항상 노력하고 발전하는 꼭 필요한 인재가 되겠습니다!</p>
+            <strong>끝까지 봐주셔서 감사합니다!</strong>
+            <p class="p">아래 폼을 이용하여 하고 싶은 말을 보내주세요!</p>
+            <!-- START HERE -->
+            <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbzu7cCUgULIWusEUMdT73knX7k7ofr0EF7urIcbZou6AeKaG6_mUGh2OpDSwa5siPagTA/exec">
+                <div class="form-elements">
+                    <fieldset class="pure-group">
+                        <label for="name">이름: </label>
+                        <input id="name" name="name" placeholder="이름" />
+                    </fieldset>
+                    <fieldset class="pure-group">
+                        <label for="email">이메일 주소:</label>
+                        <input id="email" name="email" type="email" value=""
+                        required placeholder="아이디@email.com"/>
+                    </fieldset>
+                    <fieldset class="pure-group">
+                        <label for="message">내용: </label>
+                        <textarea id="message" name="message" rows="10"
+                        placeholder="하고 싶은 말을 적어주세요..."></textarea>
+                    </fieldset>
+                    <button class="button-success pure-button button-xlarge">&nbsp;보내기</button>
+                </div>
+                <!-- Customise the Thankyou Message People See when they submit the form: -->
+                <div class="thankyou_message" style="display:none;">
+                    <h2><em>Thanks</em> for contacting us!
+                        We will get back to you soon!</h2>
+                </div>
+            </form>
+            <!-- Submit the Form to Google Using "AJAX" -->
+            <script data-cfasync="false" src="form-submission-handler.js"></script>
+            <iframe id="iframe1" name="iframe1" style="display:none"></iframe>
+            <!-- END -->
+
             <div class="info">
                 <div class="ad"> 
                     <h3 class="h3" title="클릭하면 내려옵니다">INFO</h3>
