--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ main section .wrap{
 #about .intro {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 #about .intro h3.h3  {
   font-size: 0;
@@ -82,13 +83,11 @@ main section .wrap{
   height: 100%;
 }
 #about .intro .p{
-  /*! background-color: #b5c7d370; */
   font-size: 25px;
   font-weight: 600;
   text-align: left;
   border-radius: 10px;
   width: fit-content;
-  padding: 50px 40px 40px 40px;
   box-sizing: border-box;
   letter-spacing: -1px;
   line-height: 2; 
