--- a/css/title.css
+++ b/css/title.css
@@ -19,6 +19,39 @@
   height: 100%;
   background-color: #0005; 
 }
+#title::before{
+  content: "";
+  display: block;
+  width: 5px;
+  height: 5px;
+  border-top: 2px solid #fcf951;
+  border-right: 2px solid #fcf951;
+  position: absolute;
+  bottom: 9%;
+  left: calc(50% - 2px);
+  animation: moveDown infinite 1s forwards;
+  transition: all 0.5s;
+  transform: rotate(45deg);
+}
+@keyframes moveDown{
+  0%{
+    transform: rotate(135deg);
+  }
+  100%{
+    transform: rotate(135deg) translateX(200%) translateY(-200%);
+  }
+}
+#title::after{
+  content: "";  
+  display: block;
+  width: 25px;
+  height: 50px;
+  border-radius: 25px;
+  border: 2px solid #fcf951;
+  position: absolute;
+  bottom: 5%;
+  left: calc(50% - 13px);
+}
 #title hgroup {
   line-height: 1.2;
   margin: 0 auto;
